@@ -6,6 +6,10 @@
    - markus@cvs.openbsd.org 2004/02/23 12:02:33
      [sshd.c]
      backout revision 1.279; set listen socket to non-block; ok henning.
+   - markus@cvs.openbsd.org 2004/02/23 15:12:46
+     [bufaux.c]
+     encode 0 correctly in buffer_put_bignum2; noted by Mikulas Patocka
+     and drop support for negative BNs; ok otto@
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
